# ChatCommit

./: .gitignore  Dockerfile  LICENSE  Project Plan 2025.xlsx  README.md  deploy.sh  deploy_extension.py  fly.toml  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  restartserver.sh  ~$Project Plan 2025.xlsx
app/: database.py  main.py  models.py  page.tsx  schemas.py
app/frontend/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  package.json  prerender-manifest.json  required-server-files.json  trace
app/frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  trace
app/frontend/cache/: .tsbuildinfo
app/frontend/server/: app-paths-manifest.json  middleware-build-manifest.js  (+1 more)
app/routers/: branch.py  commit.py  merge.py  rollback.py  tag.py
extension/: README_deploy.md  background.js  content.js  manifest.json  options.html  package-lock.json  popup.css  popup.html  popup.js  settings.html
frontend/: .eslintrc.json  globals.css  next.config.js  next.config.ts  package-lock.json  package.json  page.tsx  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BranchForm.rtf  CommitCard.tsx  CommitForm.tsx  MergeForm.tsx  TagForm.tsx  TagList.tsx
frontend/lib/: api.ts
scripts/: init_db.py
tests/: test_branch.py  test_commit.py
(+120 files in other folders)
