[project]
name = "ChatCommit"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.28",
    "pydantic==2.6.4",
    "pydantic-settings==2.2.1",
    "aiofiles==23.2.1",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "openai==1.16.1"
]

[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
